# cli-ai-instrumental-remover

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.gpu  LICENSE  README.md  add-ffmpeg-path.ps1  benchmark.md  docker-compose.yml
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: docker-cpu.yml  docker-gpu.yml  release-cpu.yml  release-gpu.yml
docker/: config.cuda.json  config.json
impl/: Cargo.toml  README.md  config.json
impl/src/: config.rs  error.rs  ffmpeg.rs  inference.rs  logging.rs  main.rs  model_data.rs  pipeline.rs
impl/tests/: integration_test.rs
models/mdxnet/: README.md  model_data.json
scripts/: bench.ps1
specs/: draft.md  optimization-todo.md  prompt_plan.md  todo.md
